Связана авторизация и личный кабинет (frontend и backend). Добавлены несколько api для этого
